==================================
Change log for gocept.pseudonymize
==================================

0.2 (unreleased)
================

- Nothing changed yet.


0.1 (2013-09-05)
================

initial release